[project]
name = "research-paper-fetcher"
version = "0.1.0"
description = "A Python package to fetch research papers from PubMed and filter authors from biotech companies."
authors = [
    {name = "Deepali Singh Thakur",email = "deepalithakur31.official@gmail.com"}
]
packages = [{include = "research_paper_fetcher"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = "3.13.2"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]
 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
